[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ReForge"
description = "A 2D game engine written in Python using both PyGame, PySDL2 and PySDL3."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Yusuf Rençber", email = "aermoss.0@gmail.com"}
]
dependencies = ["pygame", "pysdl2", "pysdl2-dll", "pysdl3"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Repository = "https://github.com/Aermoss/ReForge"
Issues = "https://github.com/Aermoss/ReForge/issues"

[tool.setuptools]
packages = ["reforge", "reforge.api", "reforge.api.pygame", "reforge.api.sdl2", "reforge.api.sdl3"]
include-package-data = true

[tool.setuptools.package-data]
"reforge" = ["*.py"]

[tool.setuptools.dynamic]
version = {attr = "reforge.__version__"}